--- a/index.html
+++ b/index.html
@@ -3,39 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <title>Portfolio</title>
 </head>
 <body>
     <header class="light-mode">
-        <h1>
-            <!-- button dark/light mode -->
-            <button aria-label="light mode" class="light-mode">
+        <button aria-label="light mode" class="light-mode">
             <span class="material-symbols-outlined">
                 light_mode
             </span>
             </button>
-        </h1>
-            <!-- nav bar -->
-            <ul class="nav-bar">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#about">A propos</a>
-                </li>
-                <li>
-                    <a href="#skills">Compétences</a>
-                </li>
-                <li>
-                    <a href="#projects">Projets</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
+    
+        <nav class="navbar">
+            <a href="#" id="home" class="button">Home</a>
+            <a href="#about" id="about" class="button">A propos</a>
+            <a href="#skills" id="skills" class="button">Compétences</a>
+            <a href="#projects" id="projects" class="button">Projets</a>
+            <a href="#contacts" id="contact" class="button">Contacts</a>
+        </nav>
     </header>
+
     <main>
         <section class="title">
             <h2 id="pres">
