test after rebase

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Portfolio développeuse front & back
             </h2>
             <h2 id="name">
-                Cynthia Apura
+                Cynthia APURA
             </h2>
         </section>
 
