--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="light-mode">
-        <button aria-label="light mode" class="light-mode">
+        <button aria-label="light mode" class="button_mode">
             <span class="material-symbols-outlined">
                 light_mode
             </span>
@@ -25,13 +25,15 @@
     </header>
 
     <main>
-        <section class="title">
-            <h2 id="pres">
-                Portfolio développeuse front & back
-            </h2>
-            <h2 id="name">
-                Cynthia APURA
-            </h2>
+        <section class="img">
+            <h1 id="name">
+                APURA Cynthia
+                <p id="pres" class="title">
+                    Portfolio développeuse front & back
+                </p>
+            </h1>
+            
+
         </section>
 
         <section>
