--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
             </h2>
             <div class="gallery-secondary" role="region" aria-label="project">
 
-                <ul class="gallery" id="gallery-project">
-                    <li><img src="./asset/refont_web.png" alt="projet1" loading="lazy"></li>
-                    <li><img src="./asset/tp_batman.png" alt="projet1" loading="lazy"></li>
-                    <li><img src="./asset/tp_js.png" alt="projet1" loading="lazy"></li>
-                    <li><img src="./asset/tp_php.png" alt="projet1" loading="lazy"></li>
-                    <li><img src="./asset/tp_portfolio.png" alt="projet1" loading="lazy"></li>
-                </ul>
-
+                <a href="">
+                    <img src="./asset/refont_web.png" alt="projet ecole" loading="lazy">
+                </a>
+                <a href="">
+                    <img src="./asset/tp_batman.png" alt="projet pro" loading="lazy">
+                </a>
+                <a href="fiche_E5.html" alt="Projet lié au fiche E5">
+                    <img src="./asset/tp_js.png" alt="fiche E5" loading="lazy">
+                </a>
             </div>
             
             <h2 id="contact" class="section-page">
