redirection pour les projets + ajout des paquets .json dans gitignore

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             </h2>
             <div class="gallery-secondary" role="region" aria-label="project">
 
-                <a href="">
-                    <img src="./asset/refont_web.png" alt="projet ecole" loading="lazy">
+                <a href="projet_ecole.html" alt="projet ecole">
+                    <img src="./asset/tp_batman.png" alt="projet ecole" loading="lazy">
                 </a>
-                <a href="">
-                    <img src="./asset/tp_batman.png" alt="projet pro" loading="lazy">
+                <a href="alternance.html" alt="projet au court de mon alternance">
+                    <img src="./asset/refont_web.png" alt="projet pro" loading="lazy">
                 </a>
                 <a href="fiche_E5.html" alt="Projet lié au fiche E5">
                     <img src="./asset/tp_js.png" alt="fiche E5" loading="lazy">
