--- a/projet_ecole.html
+++ b/projet_ecole.html
@@ -23,10 +23,16 @@
     </header>
     <main>
         <h1>En cours de réalisation</h1>
+        <p></p>
         <p>
-            Ajout des projets pour le BTS
-            <li> - Projet java </li>
-            <li> - Projet web </li>
+            Ajout des projets réalisé au cours de ma formation
+            <ul class="gallery" id="gallery-project">
+                <li><img src="./asset/refont_web.png" alt="projet1" loading="lazy"></li>
+                <li><img src="./asset/tp_batman.png" alt="projet2" loading="lazy"></li>
+                <li><img src="./asset/tp_js.png" alt="projet3" loading="lazy"></li>
+                <li><img src="./asset/tp_php.png" alt="projet4" loading="lazy"></li>
+                <li><img src="./asset/tp_portfolio.png" alt="projet5" loading="lazy"></li>
+            </ul>
         </p>
     </main>
 </body>
