--- a/alternance.html
+++ b/alternance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projets au cours de ma formation</title>
+    <title>Projets en alternance</title>
 </head>
 <body>
     <header>
@@ -23,11 +23,7 @@
     </header>
     <main>
         <h1>En cours de réalisation</h1>
-        <p>
-            Ajout des projets pour le BTS
-            <li> - Projet java </li>
-            <li> - Projet web </li>
-        </p>
+        <p>Description de mon alternance, des missions et de la méthode agile/scrum</p>
     </main>
 </body>
 </html>
