ajout de la redirection vers github pour E5

--- a/fiche_E5.html
+++ b/fiche_E5.html
@@ -25,8 +25,12 @@
         <h1>En cours de réalisation</h1>
         <p>
             Ajout des projets pour le BTS
-            <li> - Projet java </li>
-            <li> - Projet web </li>
+            <a href="https://github.com/ounissaSadaoui/personnel" alt="projet java" target="_blank"> 
+                <li> - Projet java </li>
+            </a>
+            <a href="https://github.com/cynthiaapura/projet_maison_des_ligues" alt="projet web" target="_blank">
+                <li> - Projet web </li>
+            </a>
         </p>
     </main>
 </body>
