--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#about" id="about" class="button">A propos</a>
             <a href="#skills" id="skills" class="button">Compétences</a>
             <a href="#projects" id="projects" class="button">Projets</a>
+            <a href="#veille" id="veille" class="button">Veille technologique</a>
             <a href="#contacts" id="contact" class="button">Contacts</a>
         </nav>
     </header>
@@ -76,6 +77,14 @@
                 </a>
             </div>
             
+            <h2 id="veille" class="section-page">
+                Veille technologique
+            </h2>
+            <p>Évolution des méthodologies de développement logiciel : tendances et pratiques émergentes</p>
+            <a href="veille.html" alt="veille technologique">    
+                Découvrir le sujet
+            </a>
+
             <h2 id="contact" class="section-page">
                 Contact
             </h2>
