reorganisation du projet

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 Veille technologique
             </h2>
             <p>Évolution des méthodologies de développement logiciel : tendances et pratiques émergentes</p>
-            <a href="veille.html" alt="veille technologique">    
+            <a href="./pages/veille.html" alt="veille technologique">    
                 Découvrir le sujet
             </a>
 
