reorganisation du projet

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             </h2>
             <div class="gallery-secondary" role="region" aria-label="project">
 
-                <a href="projet_ecole.html" alt="projet ecole">
+                <a href="./pages/projet_ecole.html" alt="projet ecole">
                     <img src="./asset/tp_batman.png" alt="projet ecole" loading="lazy">
                 </a>
-                <a href="alternance.html" alt="projet au court de mon alternance">
+                <a href="./pages/alternance.html" alt="projet au court de mon alternance">
                     <img src="./asset/refont_web.png" alt="projet pro" loading="lazy">
                 </a>
-                <a href="fiche_E5.html" alt="Projet lié au fiche E5">
+                <a href="./pages/fiche_E5.html" alt="Projet lié au fiche E5">
                     <img src="./asset/tp_js.png" alt="fiche E5" loading="lazy">
                 </a>
             </div>
