--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     
         <nav class="navbar">
             <a href="#" id="home" class="button">Home</a>
-            <a href="#about" id="about" class="button">A propos</a>
-            <a href="#skills" id="skills" class="button">Compétences</a>
-            <a href="#projects" id="projects" class="button">Projets</a>
-            <a href="#veille" id="veille" class="button">Veille technologique</a>
-            <a href="#contacts" id="contact" class="button">Contacts</a>
+            <a href="#about" id="btn_about" class="button">A propos</a>
+            <a href="#skills" id="btn_skills" class="button">Compétences</a>
+            <a href="#projects" id="btn_projects" class="button">Projets</a>
+            <a href="#veille" id="btn_veille" class="button">Veille technologique</a>
+            <a href="#contacts" id="btn_contact" class="button">Contacts</a>
         </nav>
     </header>
 
