--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                     Portfolio développeuse front & back
                 </p>
             </h1>
-            
-
         </section>
 
-        <section>
+        <section class="general_section">
             <h2 id="about" class="section-page">
                 A propos
             </h2>
