start css main page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2 id="projects" class="section-page">
                 Projets
             </h2>
-            <div class="gallery-secondary" role="region" aria-label="project">
+           <!-- <div class="gallery-secondary" role="region" aria-label="project">
 
                 <a href="./pages/projet_ecole.html" alt="projet ecole">
                     <img src="./asset/tp_batman.png" alt="projet ecole" loading="lazy">
@@ -73,17 +73,20 @@
                 <a href="./pages/fiche_E5.html" alt="Projet lié au fiche E5">
                     <img src="./asset/tp_js.png" alt="fiche E5" loading="lazy">
                 </a>
-            </div>
+            </div> -->
             
             <h2 id="veille" class="section-page">
                 Veille technologique
             </h2>
-            <p>Évolution des méthodologies de développement logiciel : tendances et pratiques émergentes</p>
+            <p class="dsc-veille">
+                Évolution des méthodologies de développement logiciel : tendances et pratiques émergentes
+         
             <a href="./pages/veille.html" alt="veille technologique">    
                 Découvrir le sujet
             </a>
+            </p>
 
-            <h2 id="contact" class="section-page">
+            <h2 id="contact" class="contact-page">
                 Contact
             </h2>
             <p>
