--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <section class="img">
             <h1 id="name">
                 APURA Cynthia
-                <p id="pres" class="title">
-                    Portfolio développeuse front & back
-                </p>
+                <br>
+                Portfolio développeuse front & back
             </h1>
         </section>
 
@@ -64,13 +63,13 @@
             </h2>
             <div class="gallery-secondary" role="region" aria-label="project">
 
-                <a href="./pages/projet_ecole.html" alt="projet ecole">
+                <a href="./pages/projet_ecole.html">
                     <img src="./asset/tp_batman.png" alt="projet ecole" loading="lazy">
                 </a>
-                <a href="./pages/alternance.html" alt="projet au court de mon alternance">
+                <a href="./pages/alternance.html">
                     <img src="./asset/refont_web.png" alt="projet pro" loading="lazy">
                 </a>
-                <a href="./pages/fiche_E5.html" alt="Projet lié au fiche E5">
+                <a href="./pages/fiche_E5.html">
                     <img src="./asset/tp_js.png" alt="fiche E5" loading="lazy">
                 </a>
             </div>
@@ -81,7 +80,7 @@
             <p class="dsc-veille">
                 Évolution des méthodologies de développement logiciel : tendances et pratiques émergentes
          
-            <a href="./pages/veille.html" alt="veille technologique">    
+            <a href="./pages/veille.html">    
                 Découvrir le sujet
             </a>
             </p>
