--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             <div class="gallery-secondary" role="region" aria-label="project">
 
                 <a href="./pages/projet_ecole.html">
-                    <img src="./asset/tp_batman.png" alt="projet ecole" loading="lazy">
+                    <img src="./asset/refont_web.png" alt="projet ecole" loading="lazy">
                 </a>
                 <a href="./pages/alternance.html">
-                    <img src="./asset/refont_web.png" alt="projet pro" loading="lazy">
+                    <img src="./asset/logo_maarch.jpg" alt="projet pro" loading="lazy">
                 </a>
                 <a href="./pages/fiche_E5.html">
-                    <img src="./asset/tp_js.png" alt="fiche E5" loading="lazy">
+                    <img src="./asset/e5.png" alt="fiche E5" loading="lazy">
                 </a>
             </div>
             
