--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <h2 id="skills" class="section-page">
                 Compétences
             </h2>
-            <ul class="gallery-primary">
-                <li><img src="./asset/html.svg" alt="logo1" loading="lazy"></li>
-                <li><img src="./asset/css.svg" alt="logo2" loading="lazy"></li>
-                <li><img src="./asset/java.svg" alt="logo3" loading="lazy"></li>
-                <li><img src="./asset/js.svg" alt="logo4" loading="lazy"></li>
-                <li><img src="./asset/php.svg" alt="logo5" loading="lazy"></li>
-            </ul>
+            <div class="gallery-primary">
+                <img src="./asset/html.svg" alt="logo1" loading="lazy">
+                <img src="./asset/css.svg" alt="logo2" loading="lazy">
+                <img src="./asset/java.svg" alt="logo3" loading="lazy">
+                <img src="./asset/js.svg" alt="logo4" loading="lazy">
+                <img src="./asset/php.svg" alt="logo5" loading="lazy">
+            </div>
 
 
             <h2 id="projects" class="section-page">
