--- a/pages/alternance.html
+++ b/pages/alternance.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projets en alternance</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
+    <title>Portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="light-mode">
         <button aria-label="light mode" class="button_mode">
             <span class="material-symbols-outlined">
                 light_mode
@@ -15,10 +17,11 @@
     
         <nav class="navbar">
             <a href="#" id="home" class="button">Home</a>
-            <a href="#about" id="about" class="button">A propos</a>
-            <a href="#skills" id="skills" class="button">Compétences</a>
-            <a href="#projects" id="projects" class="button">Projets</a>
-            <a href="#contacts" id="contact" class="button">Contacts</a>
+            <a href="#about" id="btn_about" class="button">A propos</a>
+            <a href="#skills" id="btn_skills" class="button">Compétences</a>
+            <a href="#projects" id="btn_projects" class="button">Projets</a>
+            <a href="#veille" id="btn_veille" class="button">Veille technologique</a>
+            <a href="#contacts" id="btn_contact" class="button">Contacts</a>
         </nav>
     </header>
     <main>
