fin page index.html

--- a/index.html
+++ b/index.html
@@ -77,13 +77,17 @@
             <h2 id="veille" class="section-page">
                 Veille technologique
             </h2>
-            <p class="dsc-veille">
-                Évolution des méthodologies de développement logiciel : tendances et pratiques émergentes
-         
-            <a href="./pages/veille.html">    
-                Découvrir le sujet
-            </a>
-            </p>
+            <div class="dsc-veille">
+                
+                En tant qu'alternante Product Owner, je suis soucieuse d'aider mon manager à maintenir notre équipe Scrum à la pointe des méthodologies 
+                de développement logiciel. Ma veille sur l'évolution de ces pratiques répond à la volonté de mon entreprise de rester compétitive et 
+                à mon désir personnel de suivre les tendances émergentes.
+            </div>
+            <div class="lien-dsc">
+                <a href="./pages/veille.html">    
+                    Si vous souhaitez en savoir plus, cliquez ici pour en apprendre plus à ce sujet !
+                </a>
+            </div>
 
             <h2 id="contact" class="contact-page">
                 Contact
