debut page projet ecole

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="lien-dsc">
                 <a href="./pages/veille.html">    
-                    Si vous souhaitez en savoir plus, cliquez ici pour en apprendre plus à ce sujet !
+                    Si vous souhaitez en savoir plus, cliquez ici !
                 </a>
             </div>
 
