css projet ecole

--- a/pages/projet_ecole.html
+++ b/pages/projet_ecole.html
@@ -17,36 +17,80 @@
     
         <nav class="navbar">
             <a href="../index.html" id="home" class="button">Accueil</a>
-            <a href="#projet1" id="btn_projet" class="button">Refonte Web</a>
-            <a href="#projet2" id="btn_projet" class="button">TP Batman</a>
-            <a href="#projet3" id="btn_projet" class="button">TP JavaScript</a>
-            <a href="#projet4" id="btn_projet" class="button">TP PHP</a>
-            <a href="#projet5" id="btn_projet" class="button">Fake GMAIL</a>
+            <a href="#refonte" id="btn_projet" class="button">Refonte Web</a>
+            <a href="#batman" id="btn_projet" class="button">TP Batman</a>
+            <a href="#js" id="btn_projet" class="button">TP JavaScript</a>
+            <a href="#php" id="btn_projet" class="button">TP PHP</a>
+            <a href="#gmail" id="btn_projet" class="button">Fake GMAIL</a>
         </nav>
     </header>
     <main>
-        <h1>Réalisations au cours de ma formation</h1>
+        <h1 class="primary-title">
+            Réalisations au cours de ma formation au sein de l'école ITIC Paris.
+        </h1>
 
         <section class="realisations">
-            <h2 class="refonte">
+            <h2 class="title">
                Refonte web
             </h2>
-            <div class="projet-refonte">
-                Dans le cadre de notre cours de front-end, il nous à été demandé de faire le refonte d'un site web.
+            <div class="projet-refonte" id="refonte">
+                Lors de ce TP nous avions un site web qui contenait des erreurs dans la structure HTML et CSS. Il nous a été demandé de corriger les erreurs qui s'étaient 
+                glissées dans le projet ainsi que de tenir un readme afin d'expliquer les erreurs que nous avions trouvées et comment nous allions les corriger.
                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
                 <br>
                 <a href="https://cynthiaapura.github.io/refonte_design/">
-                    <img src="../asset/refont_web.png" alt="projet1" loading="lazy">
+                    <img id="projets" src="../asset/refont_web.png" alt="projet1" loading="lazy">
                 </a>
             </div>
+
+            <h2 class="title">
+                TP Batman
+             </h2>
+             <div class="tp_batman" id="batman">
+                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
+                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
+                 <br>
+                 <a href="https://cynthiaapura.github.io/refonte_design/">
+                     <img id="projets" src="../asset/tp_batman.png" alt="projet2" loading="lazy">
+                 </a>
+             </div>
+
+             <h2 class="title">
+                TP JavaScript
+             </h2>
+             <div class="tp-js" id="js">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
+                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
+                 <br>
+                 <a href="https://cynthiaapura.github.io/refonte_design/">
+                     <img id="projets" src="../asset/tp_js.png" alt="projet3" loading="lazy">
+                 </a>
+             </div>
+
+             <h2 class="title">
+                TP PHP
+             </h2>
+             <div class="tp-php" id="php">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
+                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
+                 <br>
+                 <a href="https://cynthiaapura.github.io/refonte_design/">
+                     <img id="projets" src="../asset/tp_php.png" alt="projet4" loading="lazy">
+                 </a>
+             </div>
+
+             <h2 class="title">
+                Fake Gmail
+             </h2>
+             <div class="fake-gmail" id="gmail">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
+                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
+                 <br>
+                 <a href="https://cynthiaapura.github.io/refonte_design/">
+                     <img id="projets" src="../asset/home-page.png" alt="projet5" loading="lazy">
+                 </a>
+             </div>
         </section>
-       
-            <!--
-            <img src="../asset/tp_batman.png" alt="projet2" loading="lazy">
-            <img src="../asset/tp_js.png" alt="projet3" loading="lazy">
-            <img src="../asset/tp_php.png" alt="projet4" loading="lazy">
-            <img src="../asset/home-page.png" alt="projet5" loading="lazy">
-            -->
     </main>
     <footer>
         <p>
