--- a/pages/projet_ecole.html
+++ b/pages/projet_ecole.html
@@ -30,66 +30,77 @@
         </h1>
 
         <section class="realisations">
-            <h2 class="title">
-               Refonte web
-            </h2>
-            <div class="projet-refonte" id="refonte">
-                Lors de ce TP nous avions un site web qui contenait des erreurs dans la structure HTML et CSS. Il nous a été demandé de corriger les erreurs qui s'étaient 
-                glissées dans le projet ainsi que de tenir un readme afin d'expliquer les erreurs que nous avions trouvées et comment nous allions les corriger.
-                <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
-                <br>
-                <a href="https://cynthiaapura.github.io/refonte_design/">
-                    <img id="projets" src="../asset/refont_web.png" alt="projet1" loading="lazy">
-                </a>
-            </div>
+                <h2 class="title">
+                    Refonte web
+                </h2>
+                <div class="projet" id="refonte">
 
-            <h2 class="title">
-                TP Batman
-             </h2>
-             <div class="tp_batman" id="batman">
-                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
-                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
-                 <br>
-                 <a href="https://cynthiaapura.github.io/refonte_design/">
-                     <img id="projets" src="../asset/tp_batman.png" alt="projet2" loading="lazy">
-                 </a>
-             </div>
+                    <p class="texte">
+                        Lors de ce TP nous avions un site web qui contenait des erreurs dans la structure HTML et CSS. Il nous a été demandé de corriger les erreurs qui s'étaient 
+                        glissées dans le projet ainsi que de tenir un readme afin d'expliquer les erreurs que nous avions trouvées et comment nous allions les corriger.
+                        <br>
+                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                    </p>
+                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                        <img id="projets" src="../asset/refont_web.png" alt="projet1" loading="lazy">
+                    </a>
+                </div>
 
-             <h2 class="title">
-                TP JavaScript
-             </h2>
-             <div class="tp-js" id="js">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
-                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
-                 <br>
-                 <a href="https://cynthiaapura.github.io/refonte_design/">
-                     <img id="projets" src="../asset/tp_js.png" alt="projet3" loading="lazy">
-                 </a>
-             </div>
+                <h2 class="title">
+                    TP Batman
+                </h2>
+                <div class="projet" id="batman">
+                    <p class="texte">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra nunc eget justo placerat, sed dictum nisi finibus. Duis pulvinar leo eu urna fermentum condimentum elementum eu ligula. Integer quis eros finibus, interdum elit quis, mollis lectus. Maecenas in lorem a mauris tempus gravida ut et lacus. Integer faucibus commodo aliquam. Praesent pretium lacinia risus eget elementum.
+                        <br>
+                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                    </p>
+                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                        <img id="projets" src="../asset/tp_batman.png" alt="projet2" loading="lazy">
+                    </a>
+                </div>
 
-             <h2 class="title">
-                TP PHP
-             </h2>
-             <div class="tp-php" id="php">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
-                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
-                 <br>
-                 <a href="https://cynthiaapura.github.io/refonte_design/">
-                     <img id="projets" src="../asset/tp_php.png" alt="projet4" loading="lazy">
-                 </a>
-             </div>
+                <h2 class="title">
+                    TP JavaScript
+                </h2>
+                <div class="projet" id="js">
+                    <p class="texte">
+                        Sed lobortis augue mattis sem mollis, et vehicula urna bibendum. Sed suscipit magna ac ligula semper, sed maximus turpis elementum. Ut placerat ultrices ex quis hendrerit. Phasellus ultricies, ligula vitae cursus bibendum, ligula arcu iaculis eros, vitae laoreet nibh leo vel nunc. Vestibulum faucibus nisi finibus, finibus purus ut, varius elit. Suspendisse justo magna, semper interdum pharetra eu, feugiat sit amet sem. 
+                        <br>
+                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                    </p>
+                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                        <img id="projets" src="../asset/tp_js.png" alt="projet2" loading="lazy">
+                    </a>
+                </div>
 
-             <h2 class="title">
-                Fake Gmail
-             </h2>
-             <div class="fake-gmail" id="gmail">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, maxime.
-                 <a href="https://github.com/cynthiaapura/refonte_design">Lien vers le projet GitHub</a>
-                 <br>
-                 <a href="https://cynthiaapura.github.io/refonte_design/">
-                     <img id="projets" src="../asset/home-page.png" alt="projet5" loading="lazy">
-                 </a>
-             </div>
+                <h2 class="title">
+                    TP PHP
+                </h2>
+                <div class="projet" id="php">
+                    <p class="texte">
+                        Phasellus porttitor, lectus scelerisque eleifend fringilla, purus velit lacinia sem, sed porta magna erat eget odio. Sed quis scelerisque lectus. Vestibulum faucibus convallis orci, sit amet fermentum mauris fermentum sit amet. Fusce congue iaculis sapien a interdum. Sed semper ligula condimentum dui maximus malesuada. Vivamus at purus ut urna gravida consequat id nec tortor. Nullam diam magna, tincidunt ut tristique quis, sollicitudin a diam. Vivamus vitae tincidunt lectus. 
+                        <br>
+                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                    </p>
+                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                        <img id="projets" src="../asset/tp_php.png" alt="projet2" loading="lazy">
+                    </a>
+                </div>
+
+                <h2 class="title">
+                    Fake Gmail
+                </h2>
+                <div class="projet" id="gmail">
+                    <p class="texte">
+                        Praesent arcu nulla, volutpat in tincidunt blandit, sodales sit amet magna. Nam in sodales tortor. Praesent rhoncus efficitur leo, vel porta mi venenatis eget. Phasellus laoreet faucibus dui et imperdiet. Sed ut efficitur tellus, facilisis posuere sem. Donec consectetur purus nisi. Nullam eu leo et ipsum laoreet suscipit id quis sapien. In quis arcu aliquet, cursus leo a, egestas nisl. Vestibulum eleifend commodo ante, vel ornare orci suscipit ut. 
+                        <br>
+                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                    </p>
+                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                        <img id="projets" src="../asset/home-page.png" alt="projet2" loading="lazy">
+                    </a>
+                </div>
         </section>
     </main>
     <footer>
