redirection page projet_ecole

--- a/pages/projet_ecole.html
+++ b/pages/projet_ecole.html
@@ -41,7 +41,7 @@
                         <br>
                         <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
-                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                    <a href="https://cynthiaapura.github.io/refonte_design/" target="_blank">
                         <img id="projets" src="../asset/refont_web.png" alt="projet1" loading="lazy">
                     </a>
                 </div>
@@ -53,9 +53,9 @@
                     <p class="texte">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra nunc eget justo placerat, sed dictum nisi finibus. Duis pulvinar leo eu urna fermentum condimentum elementum eu ligula. Integer quis eros finibus, interdum elit quis, mollis lectus. Maecenas in lorem a mauris tempus gravida ut et lacus. Integer faucibus commodo aliquam. Praesent pretium lacinia risus eget elementum.
                         <br>
-                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                        <a href="https://github.com/cynthiaapura/activite_gotham" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
-                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                    <a href="https://cynthiaapura.github.io/activite_gotham/" target="_blank">
                         <img id="projets" src="../asset/tp_batman.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
@@ -67,9 +67,9 @@
                     <p class="texte">
                         Sed lobortis augue mattis sem mollis, et vehicula urna bibendum. Sed suscipit magna ac ligula semper, sed maximus turpis elementum. Ut placerat ultrices ex quis hendrerit. Phasellus ultricies, ligula vitae cursus bibendum, ligula arcu iaculis eros, vitae laoreet nibh leo vel nunc. Vestibulum faucibus nisi finibus, finibus purus ut, varius elit. Suspendisse justo magna, semper interdum pharetra eu, feugiat sit amet sem. 
                         <br>
-                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                        <a href="https://github.com/cynthiaapura/tp_JS" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
-                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                    <a href="https://cynthiaapura.github.io/tp_JS/" target="_blank">
                         <img id="projets" src="../asset/tp_js.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
@@ -81,9 +81,9 @@
                     <p class="texte">
                         Phasellus porttitor, lectus scelerisque eleifend fringilla, purus velit lacinia sem, sed porta magna erat eget odio. Sed quis scelerisque lectus. Vestibulum faucibus convallis orci, sit amet fermentum mauris fermentum sit amet. Fusce congue iaculis sapien a interdum. Sed semper ligula condimentum dui maximus malesuada. Vivamus at purus ut urna gravida consequat id nec tortor. Nullam diam magna, tincidunt ut tristique quis, sollicitudin a diam. Vivamus vitae tincidunt lectus. 
                         <br>
-                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                        <a href="https://github.com/cynthiaapura/etude_de_cas" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
-                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                    <a href="https://cynthiaapura.github.io/etude_de_cas/" target="_blank">
                         <img id="projets" src="../asset/tp_php.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
@@ -95,9 +95,9 @@
                     <p class="texte">
                         Praesent arcu nulla, volutpat in tincidunt blandit, sodales sit amet magna. Nam in sodales tortor. Praesent rhoncus efficitur leo, vel porta mi venenatis eget. Phasellus laoreet faucibus dui et imperdiet. Sed ut efficitur tellus, facilisis posuere sem. Donec consectetur purus nisi. Nullam eu leo et ipsum laoreet suscipit id quis sapien. In quis arcu aliquet, cursus leo a, egestas nisl. Vestibulum eleifend commodo ante, vel ornare orci suscipit ut. 
                         <br>
-                        <a href="https://github.com/cynthiaapura/refonte_design" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
+                        <a href="https://github.com/cynthiaapura/projet_gmail" class="lien-git" target="_blank">Lien vers le projet GitHub</a>
                     </p>
-                    <a href="https://cynthiaapura.github.io/refonte_design/">
+                    <a href="https://cynthiaapura.github.io/projet_gmail/" target="_blank">
                         <img id="projets" src="../asset/home-page.png" alt="projet2" loading="lazy">
                     </a>
                 </div>
