--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </button>
     
         <nav class="navbar">
-            <a href="#" id="home" class="button">Home</a>
+            <a href="#" id="home" class="button">Accueil</a>
             <a href="#about" id="btn_about" class="button">A propos</a>
             <a href="#skills" id="btn_skills" class="button">Compétences</a>
             <a href="#projects" id="btn_projects" class="button">Projets</a>
