--- a/pages/alternance.html
+++ b/pages/alternance.html
@@ -16,12 +16,12 @@
             </button>
     
         <nav class="navbar">
-            <a href="#" id="home" class="button">Home</a>
-            <a href="#about" id="btn_about" class="button">A propos</a>
-            <a href="#skills" id="btn_skills" class="button">Compétences</a>
-            <a href="#projects" id="btn_projects" class="button">Projets</a>
-            <a href="#veille" id="btn_veille" class="button">Veille technologique</a>
-            <a href="#contacts" id="btn_contact" class="button">Contacts</a>
+            <a href="../index.html" id="home" class="button">Accueil</a>
+            <a href="../index.html#about" id="btn_about" class="button">A propos</a>
+            <a href="../index.html#skills" id="btn_skills" class="button">Compétences</a>
+            <a href="../index.html#projects" id="btn_projects" class="button">Projets</a>
+            <a href="../index.html#veille" id="btn_veille" class="button">Veille technologique</a>
+            <a href="../index.html#contact" id="btn_contact" class="button">Contacts</a>
         </nav>
     </header>
     <main>
