--- a/pages/projet_ecole.html
+++ b/pages/projet_ecole.html
@@ -17,11 +17,11 @@
     
         <nav class="navbar">
             <a href="../index.html" id="home" class="button">Accueil</a>
-            <a href="#refonte" id="btn_projet" class="button">Refonte Web</a>
-            <a href="#batman" id="btn_projet" class="button">TP Batman</a>
-            <a href="#js" id="btn_projet" class="button">TP JavaScript</a>
-            <a href="#php" id="btn_projet" class="button">TP PHP</a>
-            <a href="#gmail" id="btn_projet" class="button">Fake GMAIL</a>
+            <a href="../index.html#about" id="btn_about" class="button">A propos</a>
+            <a href="../index.html#skills" id="btn_skills" class="button">Compétences</a>
+            <a href="../index.html#projects" id="btn_projects" class="button">Projets</a>
+            <a href="../index.html#veille" id="btn_veille" class="button">Veille technologique</a>
+            <a href="../index.html#contact" id="btn_contact" class="button">Contacts</a>
         </nav>
     </header>
     <main>
