--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                 A propos
             </h2>
             <p class="bg-tile">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Je m'appelle Cynthia Apura, en pleine reconversion professionnelle après avoir passé cinq ans dans le secteur de la beauté. 
+                Suite à un bilan de compétences approfondi, j'ai opté pour une nouvelle aventure dans le domaine de l'informatique, avec pour 
+                objectif de me spécialiser en tant que Product Owner.
+                J'ai rejoint l'équipe de Maarch en janvier 2023, initialement au sein du pôle Delivery en tant que support technique et fonctionnel. 
+                Après huit mois au sein de cette équipe, j'ai eu l'opportunité d'intégrer l'équipe R&D en tant qu'assistante Product Owner.
+                Mon parcours illustre ma volonté d'acquérir de nouvelles compétences et de m'épanouir dans un domaine en constante évolution.
             </p>
 
 
