--- a/pages/alternance.html
+++ b/pages/alternance.html
@@ -25,8 +25,76 @@
         </nav>
     </header>
     <main>
-        <h1>En cours de réalisation</h1>
-        <p>Description de mon alternance, des missions et de la méthode agile/scrum</p>
+        <section class="section_alt">
+            <h1 id="alt" class="alt_h1">
+                Mon Alternance
+                <img src="../asset/courrier.svg" alt="logo maarch">
+            </h1>
+            <div class="about_alt">
+                <p>
+                    Fondée en 2004 par Jean-Louis ERCOLANI, Maarch est une entreprise française spécialisée dans la GED 
+                    (Gestion Électronique de Documents) et la GEC (Gestion Électronique de Courriers). 
+                    Grâce à ses solutions open source et sa suite logicielle complète, Maarch est reconnue comme un acteur majeur dans ces domaines.
+                    Parmi ses nombreux clients Maarch compte des clients prestigieux tels que certains ministère français 
+                    comme celui de l’Intérieur ou encore les services du Premier Ministre, ainsi que de nombreuses collectivités et 
+                    des clients du secteur privée.
+
+                    En Janvier 2023 j’ai intégré les équipes du pôle Delivery de Maarch, afin de renforcer l’équipe support. 
+                    Mes missions étaient notamment le support fonctionnel de l’application auprès de nos clients et 
+                    également le support technique lors du déploiement de la solution Maarch Courrier.
+                    Après 8 mois au support, j’ai eu l’opportunité d’intégré l’équipe de R&D en tant qu’assistance Product Owner. 
+                    Pour moi ce fut une réelle chance de pouvoir intégré la R&D, étant donnée que l’objectif de ma reprise d’étude est de devenir 
+                    Product Owner.
+                </p>
+            </div>
+            <section class="missions">
+                <div class="missions-support">
+                    <h3 class="technique">
+                        Support technique
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                    <h3 class="fonctionnel">
+                        Support fonctionnel
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                </div>
+                <div class="missions-rd">
+                    <h3 class="backlog">
+                        Gestion du backlog
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                    <h3 class="ceremonies">
+                        Organisation et pilotage des cérémonies scrum
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                    <h3 class="us">
+                        User story
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                    <h3 class="bugs">
+                        Création des tickets de bugs
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                    <h3 class="doc">
+                        Mise à jour de la documentation
+                    </h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, ea.
+                    </p>
+                </div>
+            </section>
     </main>
 </body>
 </html>
